strict-mtls-2.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: example
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: STRICT
