strict-mtls-3.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: require-mtls
  namespace: my-namespace
spec:
  mtls:
    mode: STRICT
