ServiceEntryfor_Remote_Region.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: payments-global
spec:
  hosts:
  - payments.global.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  addresses:
  - 240.0.0.2
  endpoints:
  - address: us-east1-payments.example.com
    locality: us-east1
  - address: us-west1-payments.example.com
    locality: us-west1
