egress_service_entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: allow-external-api
spec:
  hosts:
  - "api.external-service.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
