faultInjection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 7s
      abort:
        percentage:
          value: 10
        httpStatus: 500
    route:
    - destination:
        host: reviews
        subset: v1
