auth_policy_least_priv.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-deletes
  namespace: istio-system
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["DELETE"]
